--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Typescript / HTML / CSS setup",
   "scripts": {
-    "start": "webpack --watch --config webpack.dev.js & npm run server",
+    "start": "webpack --config webpack.dev.js & npm run server",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
     "server": "live-server --host=localhost"
   },
