--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matteo Barone",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^12.0.0",
     "colors": "^1.3.3",
     "css-loader": "^2.1.1",
     "live-server": "^1.2.1",
@@ -21,5 +22,9 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "leaflet": "^1.4.0",
+    "rxjs": "^6.5.1"
   }
 }
