--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack-cli": "^3.3.0",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/gsap": "^1.20.2",
+    "gsap": "^2.1.3"
+  }
 }
