--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Typescript / HTML / CSS setup",
   "scripts": {
-    "start": "webpack --config webpack.dev.js & npm run server",
+    "start": "webpack --config webpack.dev.js",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
     "server": "live-server --host=localhost"
   },
@@ -24,7 +24,9 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@types/d3": "^5.7.2",
     "@types/gsap": "^1.20.2",
+    "d3": "^5.16.0",
     "gsap": "^2.1.3"
   }
 }
